@@ -1,3 +1,7 @@
+2004-06-08  Paul Gatille  <pol@dfs>
+
+	* fixed litle glitch in socket when WITH_SSL not defined
+
 2004-06-02  Paul Gatille  <pge@xanadu>
 
 	* src/Memory/fastmem.c: 
